tests/testcases/errors/BCE0022-14.boo
"""
BCE0022-14.boo(4,19): BCE0022: Cannot convert '(object)' to '(string)'.
"""
ss as (string) = (,)
